--- a/static/index.css
+++ b/static/index.css
@@ -7,7 +7,7 @@
     height: 100vh; /* Full viewport height */
   }
   .left-column {
-    flex: 0 0 80px; /* Fixed width */
+    width: 80px; /* Fixed width */
     height: 100%;
     background-color: #f2f2f2;
     /* More styles for the left column content */
